--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -50,12 +50,19 @@ body {
     line-height: 1.2;
 }
 
-.header__phone-text {
+.header__phone-text-button {
+    background: none;
+    border: none;
     color:var(--white);
     font-family: "Inter", sans-serif;
     font-weight: 400;
     font-size: 14px;
     line-height: 1.5;
+    cursor: pointer;
+    padding: 0;
+    margin: 0;
+    text-align: left;
+    display: block;
 }
 
 .header__logo {
@@ -715,6 +722,21 @@ footer {
     width: 100%;
     padding: 30px 0;
     margin-top: 0;
+}
+
+.footer__phone-text-button {
+    background: none;
+    border: none;
+    color:var(--white);
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.5;
+    cursor: pointer;
+    padding: 0;
+    margin: 0;
+    text-align: left;
+    display: block;
 }
 
 .footer__center {
