changed index.html and style.css (corrected BEM names for block cooperation)

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -277,7 +277,7 @@ h1 {
 }
 
 /* Контейнер с производством для компаний и брендов */
-.cooperation__container{
+.cooperation {
     background-color: var(--grey-total);
     padding: 10px;
     width: 100%;
