--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -115,7 +115,7 @@ body {
     margin: 0 auto;
 }
 
-.header__center-button {
+.button {
     background-color: var(--yellow);
     color:var(--black-grey);
     padding: 10px 20px;
@@ -764,7 +764,7 @@ footer {
 }
 
 @media (any-hover: hover) {
-    .header__center-button:hover {
+    .button:hover {
         background-color: var(--dark-yellow);
     }
 }
@@ -780,7 +780,7 @@ footer {
         max-width: 90%;
     }
 
-    .header__center-button {
+    .button {
         padding: 8px 16px;
         font-size: 14px;
     }
