--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -50,21 +50,6 @@ body {
     line-height: 1.2;
 }
 
-.header__phone-text-button {
-    background: none;
-    border: none;
-    color:var(--white);
-    font-family: "Inter", sans-serif;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.5;
-    cursor: pointer;
-    padding: 0;
-    margin: 0;
-    text-align: left;
-    display: block;
-}
-
 .header__logo {
     text-align: center;
 }
@@ -130,6 +115,21 @@ body {
 
     transition: background-color 0.3s linear;
 
+}
+
+.call_me_button {
+    background: none;
+    border: none;
+    color:var(--white);
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.5;
+    cursor: pointer;
+    padding: 0;
+    margin: 0;
+    text-align: left;
+    display: block;
 }
 
 .main {
@@ -723,21 +723,6 @@ footer {
     width: 100%;
     padding: 30px 0;
     margin-top: 0;
-}
-
-.footer__phone-text-button {
-    background: none;
-    border: none;
-    color:var(--white);
-    font-family: "Inter", sans-serif;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.5;
-    cursor: pointer;
-    padding: 0;
-    margin: 0;
-    text-align: left;
-    display: block;
 }
 
 .footer__center {
