--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -34,6 +34,7 @@ body {
 
 .header__line {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     width: 90%;
