--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -24,9 +24,9 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
     width: 100%;
-    height: 677px;
+    height: auto;
     position: relative;
     pointer-events: none;
     z-index: 10;
@@ -38,8 +38,9 @@ body {
     justify-content: space-between;
     align-items: center;
     width: 90%;
+    max-width: 1200px;
     padding: 30px 0;
-    margin-top: 0;
+    margin: 0 auto;
 }
 
 .number {
@@ -89,15 +90,26 @@ body {
 
 .header__center {
     text-align: center;
-    margin: -680px 0 5% 0;
-    padding-top: 200px;
-    padding-bottom: 200px;
-    background-image: url(bg.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-color: var(--black-total);
     position: relative;
-    z-index: 5;
+    margin-top: -170px;
+    padding: 200px 0;
+    overflow: hidden;
+}
+
+.header__center-bg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+    opacity: 1;
+    z-index: -1;
+}
+
+.header__center-title, .button {
+    position: relative;
+    z-index: 1;
 }
 
 .header__center-title {
