changed style.css (added adaptivity for blocks video, cooperation and prints-techniques)

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -776,6 +776,26 @@ footer {
         color: var(--black-total);
     }
 
+    .video {
+        width: 90%;
+        height: 300px;
+    }
+
+    .cooperations {
+        max-width: 80%;
+        gap: 10px;
+    }
+
+    .cooperations__cart {
+        flex: 1 1 90%;
+        padding: 10px;
+        max-width: 70%;
+    }
+
+    .prints-techniques__container {
+        width: 90%;
+    }
+
     .actual-manufacturing__cart {
         flex: 1 1 calc(50% - 20px);
         max-width: calc(50% - 20px);
@@ -788,17 +808,6 @@ footer {
         max-width: calc(50% - 20px);
         align-items: center;
         padding: 15px;
-    }
-
-    .cooperations {
-        max-width: 80%;
-        gap: 10px;
-    }
-
-    .cooperations__cart {
-        flex: 1 1 90%;
-        padding: 10px;
-        max-width: 70%;
     }
 }
 
@@ -863,6 +872,31 @@ footer {
         color: var(--black-total);
     }
 
+    .video {
+        height: 250px;
+    }
+
+    .cooperations {
+        flex-direction: column;
+        align-items: center;
+        max-width: 100%;
+    }
+
+    .cooperations__cart {
+        flex: 1 1 100%;
+        max-width: 80%;
+    }
+
+    .prints-techniques {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .prints-techniques__cart {
+        flex: 1 1 100%;
+        max-width: 80%;
+    }
+
     .actual-manufacturing__cart {
         flex: 1 1 100%;
         max-width: 100%;
@@ -925,17 +959,6 @@ footer {
         height: auto;
         margin-bottom: 10px;
     }
-
-    .cooperations {
-        max-width: 90%;
-        gap: 10px;
-    }
-
-    .cooperations__cart {
-        flex: 1 1 100%;
-        padding: 10px;
-        max-width: 90%;
-    }
 }
 
 @media only screen and (max-width: 480px) {
@@ -979,6 +1002,22 @@ footer {
 
     .product__price {
         font-size: 14px;
+    }
+
+    .video {
+        height: 200px;
+    }
+
+    .cooperations__cart {
+        max-width: 100%;
+    }
+
+    .prints-techniques__cart {
+        max-width: 100%;
+    }
+
+    .section-block h2 {
+        font-size: 32px;
     }
 
     .collaborations__grid {
