changed style.css (changed max-width value to 767.98px)

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -844,7 +844,7 @@ footer {
     }
 }
 
-@media only screen and (max-width: 768px) {
+@media (max-width: 767.98px) {
     .header__line {
         flex-direction: column;
         align-items: center;
