--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -27,9 +27,12 @@ body {
     justify-content: space-between;
     width: 100%;
     height: auto;
-    position: relative;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%);
     pointer-events: none;
-    z-index: 10;
+    z-index: 2;
 }
 
 .header__line {
@@ -91,9 +94,7 @@ body {
 .header__center {
     text-align: center;
     position: relative;
-    margin-top: -170px;
-    padding: 200px 0;
-    overflow: hidden;
+    padding: 150px 0 150px 0;
 }
 
 .header__center-bg {
@@ -852,22 +853,25 @@ footer {
         padding: 15px 0;
     }
 
-    .header__phone, .header__email {
-        margin-bottom: 10px;
+    .header__logo, .header__phone, .header__email {
+        margin-bottom: 15px;
     }
 
     .header__center {
-        padding: 120px 0;
+        margin-top: 0;
+        padding: 100px 0;
     }
 
     .header__center-title {
-        font-size: 40px;
+        font-size: 36px;
         max-width: 90%;
+        margin-top: 120px;
     }
 
     .button {
-        padding: 8px 16px;
         font-size: 14px;
+        padding: 8px 16px;
+
     }
 
     .intro h1 {
